Set theme jekyll-theme-hacker

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Bone
 description: Lightning Fast HTTP Multiplexer
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-midnight
+theme: jekyll-theme-hacker
 
 gems:
   - jekyll-mentions
